--- a/css/style.css
+++ b/css/style.css
@@ -165,5 +165,26 @@ h1 {
 	.brand-logos {
 		padding-top: 16px;
 	}
-
+	.banner-image {
+		background-image: none!important;
+		background-color: transparent;
+	}
+	body:before {
+	  content: "";
+	  display: block;
+	  position: fixed;
+	  left: 0;
+	  top: 0;
+	  width: 100%;
+	  height: 100%;
+	  z-index: -10;
+	  background: url('../assets/images/bg-1.jpg') no-repeat center center;
+	  -webkit-background-size: cover;
+	  -moz-background-size: cover;
+	  -o-background-size: cover;
+	  background-size: cover;
+	}
+	#contact {
+		background-color: #fff;
+	}
 }
